# helix

./: .gitignore  Cargo.toml  README.md  ddl.sql  raw_tickers.txt  test_tickers.txt  ticker.txt
forge/: Cargo.toml
forge/src/: chromosome.rs  config.rs  dna.rs  lib.rs
repo/: Cargo.toml
repo/src/: lib.rs  schemas.rs  sql.rs
src/: chromosome.rs  config.rs  darwin.rs  dna.rs  main.rs  schemas.rs  scratch.sql  trade_signal.rs  window.rs
src/controls/: mod.rs  write_signals.rs
src/repo/: chromosomes.rs  copy_chromosomes.rs  get_quotes_by_symbol.rs  get_returns.rs  get_tickers.rs  init.rs  insert_chromosome.rs  mod.rs  pg.rs  trade_signals.rs
src/repo/sql/: get_quotes_by_symbol.rs  get_returns.rs  get_tickers.rs  insert_chromosome.rs  mod.rs
src/strategies/: above_ma.rs  below_ma.rs  con_down_days.rs  con_up_days.rs  gap_down_days.rs  gap_up_days.rs  highest_high_value.rs  lowest_low_value.rs  mod.rs  stddev_a.rs  stddev_b.rs  stddev_d.rs  stddev_f.rs
src/writer/: mod.rs  write_chromosomes.rs  write_signals.rs
vger/: Cargo.toml
vger/src/: calc.rs  lib.rs
vger/src/strategies/: above_ma.rs  below_ma.rs  con_down_days.rs  con_up_days.rs  gap_down_days.rs  gap_up_days.rs  highest_high_value.rs  lowest_low_value.rs  mod.rs  stddev_a.rs  stddev_b.rs  stddev_d.rs  stddev_f.rs
writer/: Cargo.toml
writer/src/: lib.rs
