[package]
name = "helix"
version = "0.1.0"
authors = ["choiway <waynechoi@gmail.com>"]

[dependencies]
postgres = { version = "0.15", features = ["with-uuid", "with-time"]}
uuid = { version = "0.5", features = ["v4"] }
rand = "0.5.1"
chrono = "0.4"
log = "0.4.2"
env_logger = "0.5.10"
threadpool = "1.7.1"
crossbeam-channel = "0.2"

