[package]
name = "helix"
version = "0.1.0"
authors = ["choiway <waynechoi@gmail.com>"]

[dependencies]
log = "0.4.2"
env_logger = "0.5.10"
crossbeam-channel = "0.2"
clap = "~2.33.0"

[dependencies.forge]
path = "./forge"

[dependencies.writer]
path = "./writer"

[dependencies.repo]
path = "./repo"

[dependencies.vger]
path = "./vger"